--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@mantine/core": "7.11.2",
+    "@mantine/form": "^7.12.0",
     "@mantine/hooks": "7.11.2",
+    "@svgr/webpack": "^8.1.0",
+    "classnames": "^2.5.1",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
