--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "classnames": "^2.5.1",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "20.14.8",
